...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="taP-bX-76i" secondAttribute="bottom" id="4KJ-lu-4fb"/>
                            <constraint firstItem="taP-bX-76i" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cmM-Lg-SOg"/>
                            <constraint firstItem="taP-bX-76i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ler-dW-pXl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="taP-bX-76i" secondAttribute="trailing" id="yNJ-zB-mHv"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Weather" id="N6W-Cf-c3H">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="JlY-0U-w7g">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="Mfj-Ub-xHh"/>
                            </connections>
                        </barButtonItem>
...
